--- a/quiz.html
+++ b/quiz.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizzone</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="box" id="questionScreen">
+        <div class="title">
+            DEV Quizzone
+        </div>
+
+        <div class="header">
+            <div class="scoreBox">Score : 0</div>
+                <div class="timerBox"> Time Left : 00:00</div>
+        </div>
+        <div class="questionBox">
+            Which HTML attribute is used to specify the width of an image?
+        </div>
+
+        <div class="optionBox">
+            <span>a.width</span>
+            <span>b.size</span>
+            <span>c.length</span>
+            <span>d.scale</span>
+        </div>
+        <div class="footer">
+            <button>
+                Next
+            </button>
+            <button>
+                Show Result
+            </button>
+        </div>
+    </div>
+
+   
+    <script src="script.js"></script>
 </body>
 </html>
