--- a/quiz.html
+++ b/quiz.html
@@ -31,7 +31,7 @@
                 Next
             </button>
             <button>
-                Show Result
+                <a href="result.html">Show Result</a>
             </button>
         </div>
     </div>
