Landing page updated

--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizzone</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <div class="box" id="questionScreen">
@@ -24,11 +24,11 @@
             <span>a.width</span>
             <span>b.size</span>
             <span>c.length</span>
-            <span>d.scale</span>
+            <span>d.scale</span> 
         </div>
         <div class="footer">
-            <button>
-                Next
+            <button id=nextButton>
+                Next 
             </button>
             <button>
                 <a href="result.html">Show Result</a>
@@ -37,6 +37,6 @@
     </div>
 
    
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
