--- a/quiz.html
+++ b/quiz.html
@@ -36,6 +36,12 @@
         </div>
     </div>
 
+    <div class="box">
+        <div class="instructions">
+            <h3>Quiz Instructions</h3>
+        </div>
+    </div>
+
    
     <script src="./script.js"></script>
 </body>
