--- a/quiz.html
+++ b/quiz.html
@@ -13,36 +13,49 @@
         </div>
 
         <div class="header">
-            <div class="scoreBox">Score : 0</div>
-                <div class="timerBox"> Time Left : 00:00</div>
+            <div class="scoreBox">Score : <span id="score">0</span></div>
+                <div class="timerBox"> Time Left : <span id="timer">00:00</span></div>
         </div>
         <div class="questionBox">
-            Which HTML attribute is used to specify the width of an image?
+            <span id="question"></span>
+           
         </div>
 
         <div class="optionBox">
-            <span>a.width</span>
-            <span>b.size</span>
-            <span>c.length</span>
-            <span>d.scale</span> 
+           <button class="option"></button>
+           <button class="option"></button>
+           <button class="option"></button>
+           <button class="option"></button>
         </div>
         <div class="footer">
             <button id=nextButton>
                 Next 
             </button>
-            <button>
+            <!-- <button>
                 <a href="result.html">Show Result</a>
-            </button>
-        </div>
-    </div>
-
-    <div class="box">
-        <div class="instructions">
-            <h3>Quiz Instructions</h3>
+            </button> -->
         </div>
     </div>
 
    
-    <script src="./script.js"></script>
+            <div class="modal" id="myModal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <h3>About Quiz</h3>
+                  <br>
+                  <ul>
+                    <li>The Quiz has 10 questions</li>
+                    <li>All Multiple Choice Questions</li>
+                    <li>You have 5 minutes to complete the quiz</li>
+                    <li>You will get your final score at the end of the quiz</li>
+                    <li>Good Luck!</li>
+                </ul>
+                </div>
+              </div>
+        
+    </div>
+<script src="./js/script.js"></script>
+   
+    <script src="./js/index.js"></script>
 </body>
 </html>
